$Id: CHANGES,v 1.292 2008/05/05 09:25:27 stelian Exp $

Changes between versions 0.4b41 and 0.4b42 (released xxxxxxxxxxxxxxx)
=====================================================================

1.	Fix printout of the 'Connection to' message in dump/restore.
	Thanks to Dale Wiles <dwiles@users.sourceforge.net> for the
	bug report and its fix.

2.	Fix dump -w/-W output for filesystems having the last backup
	level equal to 0. Thanks to Pascal Bouchareine
	<kalou@users.sourceforge.net> for reporting the bug.

3.	Enable restore to handle restoring onto a different SELinux
	policy from the dump. Thanks to Tony Nelson 
	<tony_nelson@users.sourceforge.net> for the patch.
	(see http://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=189845
	for details)

4.	Fix EA set failures when restoring immutable files. Thanks
	to Andrew Kroeger for the patch.

5.	Fix "mode file too large" errors when restoring huge backups.
	Thanks to Kenneth Porter <shiva@sewingwitch.com> for the bug
	report.

6.	Add the ability to link against libtinfo library if present,
	instead of libtermcap or libncurses libraries. Thanks to
	Adam Tkac <atkac@redhat.com> for the patch.

7.	When comparing a backup, do not consider to be an error the fact
	that we encounter files created while dump was in progress.
	Thanks to Kenneth Porter <shiva@sewingwitch.com> for the bug
	report.

8.	Force '-a' to be the default value when running 'restore -C'.
	Thanks to Kenneth Porter <shiva@sewingwitch.com> for the bug
	report.

9.	Many improvements to the 'cron_dump_to_disk' example.
	Thanks to Aaron S. Hawley <ashawley@users.sourceforge.net> for
	the patch.

Changes between versions 0.4b40 and 0.4b41 (released January 2, 2006)
=====================================================================

1.	Fix restore of dumped Access Control Lists. The previous
	code for EA works fine, but ACLs needed conversion from the
	ext2/3 disk format to posix_acl format before restoring.
